# ClaudeCodeGLM-supervisor

./: .gitignore  LICENSE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml
docs/: codex-setup-prompt.md  distribution-strategy.md  install.md
outputs/: claude-glm52-batch.py  claude-glm52-delegate.py  claude-glm52-delegation-contract.md  claude-glm52-reviewer.sh  claude-glm52-subagent.sh  claude-glm52.py  glm52_delegate_accounting.py  glm52_usage.py  glm52_usage_snapshots.py  glm52_vision.py
packaging/homebrew-tap/: README.md
packaging/homebrew-tap/Formula/: claude-glm52.rb
packaging/install/: claude-glm52-installer.sh
packaging/release/: build-release-assets.sh
scripts/: build_public_snapshot.py  public_audit.py  stage_public_repo.py
src/claude_glm52_supervisor/: __init__.py  _runtime.py  batch.py  cli.py  delegate.py  glm52_delegate_accounting.py  glm52_usage.py  glm52_usage_snapshots.py  glm52_vision.py  reviewer.py  subagent.py
tests/: test_claude_glm52_cli.py  test_glm52_usage.py  test_glm52_vision.py  test_process_cleanup.py
